First working fire
Taken from the classic fire tutorial from Lode Vandevenne:
http://lodev.org/cgtutor/fire.html

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "009-m5stack-lcd/components/copepod"]
 	path = 009-m5stack-lcd/components/copepod
 	url = git@github.com:tuupola/copepod.git
+[submodule "010-copepod-demo/components/copepod"]
+	path = 010-copepod-demo/components/copepod
+	url = git@github.com:tuupola/copepod.git
+[submodule "010-copepod-demo/components/esp-ili9341"]
+	path = 010-copepod-demo/components/esp-ili9341
+	url = git@github.com:tuupola/esp-ili9341.git
