--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "009-m5stack-gfx/components/copepod"]
 	path = 009-m5stack-gfx/components/copepod
 	url = git@github.com:tuupola/copepod.git
+[submodule "011-m5stack-gps/components/minmea/minmea"]
+	path = 011-m5stack-gps/components/minmea/minmea
+	url = git@github.com:kosma/minmea.git
