--- a/.gitmodules
+++ b/.gitmodules
@@ -13,12 +13,6 @@
 [submodule "010-copepod-demo/components/copepod-esp-ili9341"]
 	path = 010-m5stack-fire/components/copepod-esp-ili9341
 	url = git@github.com:tuupola/copepod-esp-ili9341.git
-[submodule "009-m5stack-gfx/components/copepod-esp-ili9341"]
-	path = 009-m5stack-gfx/components/copepod-esp-ili9341
-	url = git@github.com:tuupola/copepod-esp-ili9341.git
-[submodule "009-m5stack-gfx/components/esp-ili9341"]
-	path = 009-m5stack-gfx/components/esp-ili9341
-	url = git@github.com:tuupola/esp-ili9341.git
 [submodule "009-m5stack-gfx/components/copepod"]
 	path = 009-m5stack-gfx/components/copepod
 	url = git@github.com:tuupola/copepod.git
@@ -76,3 +70,9 @@
 [submodule "015-m5stick-gfx/components/esp-i2c-hal"]
 	path = 015-m5stick-gfx/components/esp-i2c-hal
 	url = git@github.com:tuupola/esp-i2c-hal.git
+[submodule "009-m5stack-gfx/components/copepod_esp_mipi"]
+	path = 009-m5stack-gfx/components/copepod_esp_mipi
+	url = git@github.com:tuupola/copepod_esp_mipi.git
+[submodule "009-m5stack-gfx/components/esp_mipi"]
+	path = 009-m5stack-gfx/components/esp_mipi
+	url = git@github.com:tuupola/esp_mipi.git
