--- a/.gitmodules
+++ b/.gitmodules
@@ -7,12 +7,6 @@
 [submodule "010-copepod-demo/components/copepod"]
 	path = 010-m5stack-fire/components/copepod
 	url = git@github.com:tuupola/copepod.git
-[submodule "010-copepod-demo/components/esp-ili9341"]
-	path = 010-m5stack-fire/components/esp-ili9341
-	url = git@github.com:tuupola/esp-ili9341.git
-[submodule "010-copepod-demo/components/copepod-esp-ili9341"]
-	path = 010-m5stack-fire/components/copepod-esp-ili9341
-	url = git@github.com:tuupola/copepod-esp-ili9341.git
 [submodule "009-m5stack-gfx/components/copepod"]
 	path = 009-m5stack-gfx/components/copepod
 	url = git@github.com:tuupola/copepod.git
@@ -43,12 +37,6 @@
 [submodule "014-mandelbrot/components/copepod"]
 	path = 014-mandelbrot/components/copepod
 	url = git@github.com:tuupola/copepod.git
-[submodule "014-mandelbrot/components/copepod-esp-ili9341"]
-	path = 014-mandelbrot/components/copepod-esp-ili9341
-	url = git@github.com:tuupola/copepod-esp-ili9341.git
-[submodule "014-mandelbrot/components/esp-ili9341"]
-	path = 014-mandelbrot/components/esp-ili9341
-	url = git@github.com:tuupola/esp-ili9341.git
 [submodule "013-mqtt-at/components/esp-mqtt"]
 	path = 013-mqtt-at/components/esp-mqtt
 	url = git@github.com:espressif/esp-mqtt.git
@@ -79,3 +67,24 @@
 [submodule "016-mipi-speedtest/components/esp_mipi"]
 	path = 016-mipi-speedtest/components/esp_mipi
 	url = git@github.com:tuupola/esp_mipi.git
+[submodule "014-mandelbrot/components/esp_mipi"]
+	path = 014-mandelbrot/components/esp_mipi
+	url = git@github.com:tuupola/esp_mipi.git
+[submodule "014-mandelbrot/components/copepod_esp_mipi"]
+	path = 014-mandelbrot/components/copepod_esp_mipi
+	url = git@github.com:tuupola/copepod_esp_mipi.git
+[submodule "010-m5stack-fire/components/copepod_esp_mipi"]
+	path = 010-m5stack-fire/components/copepod_esp_mipi
+	url = git@github.com:tuupola/copepod_esp_mipi.git
+[submodule "010-m5stack-fire/components/esp_mipi"]
+	path = 010-m5stack-fire/components/esp_mipi
+	url = git@github.com:tuupola/esp_mipi.git
+[submodule "017-m5stick-rtc/components/bm8563"]
+	path = 017-m5stick-rtc/components/bm8563
+	url = git@github.com:tuupola/bm8563.git
+[submodule "017-m5stick-rtc/components/esp_i2c_hal"]
+	path = 017-m5stick-rtc/components/esp_i2c_hal
+	url = git@github.com:tuupola/esp_i2c_hal.git
+[submodule "017-m5stick-rtc/components/axp192"]
+	path = 017-m5stick-rtc/components/axp192
+	url = git@github.com:tuupola/axp192.git
